[B]Retrospect v5.2.5 - Changelog - 2020-05-18[/B]

This version of Retrospect fixes some login related issues for VRT.nu and Dplay.se and squashes a minor bug for kijk.nl.

[B]Framework related[/B]
* Added: option to limit certain settings to only some channel in a channel set
* Added: option to generate a channel guid for a setting in a channel set

[B]GUI/Settings/Language related[/B]
_None_

[B]Channel related[/B]
* Added: option to specify a login for Dplay.se (Fixes #1364)
* Fixed: don't group special folders for kijk.nl (Fixes #1377)
* Fixed: VRT.nu changed their login code (Fixes #1379)